--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,6 +31,7 @@ jobs:
       
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
+          products: Image_Processing_Toolbox
 
       # Check for MATLAB code issues in the project.
       - name: Check for MATLAB code issues
