--- a/code/resources/templates/session_method_help.html.template
+++ b/code/resources/templates/session_method_help.html.template
@@ -9,7 +9,7 @@
       <!--Single-page help-->
       <table border="0" cellspacing="0" width="100%">
          <tr class="subheader">
-            <td class="headertitle">{{ title }}</td>
+            <td class="headertitle">{{ title }} - Nansen Method Help</td>
          </tr>
       </table>
       <div class="title">{{ main_title }}</div>
@@ -37,9 +37,9 @@
       <div class="sectiontitle"><a name="methods"></a>Parameters</div>
       <table class="summary-list">
          <tr class="summary-item">
-            <td class="name">Name</td>
-            <td class="name">Default value</td>
-            <td class="name">Description</td>
+            <td class="columntitle">Name</td>
+            <td class="columntitle">Default value</td>
+            <td class="columntitle">Description</td>
          </tr>
          <!-- {% for param in parameters %} -->
          <tr class="summary-item">
