--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -13,11 +13,12 @@ jobs:
   # This workflow contains:
   # 1. a matrixed test job run across a bunch of releases of MATLAB
   # 2. a reporting job that summarizes the tests, and updates release badge
+  # Todo: Include these versions in testing matrix: R2020b, R2021a, R2021b, R2022a
   test:
     strategy:
       fail-fast: false
       matrix:
-        MATLABVersion: [R2022b, R2023a, R2023b, R2024a, R2024b] #R2020b, R2021a, R2021b, R2022a,
+        MATLABVersion: [R2022b, R2023a, R2023b, R2024a, R2024b] 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
