--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -120,7 +120,7 @@ jobs:
           git config user.email "<>"
           git status
           git add code/Contents.m
-          git commit -m "Final checkins for release ${{  github.ref_name }}"
+          git commit -m "Final check-ins for release ${{  github.ref_name }} [skip ci]"
           git fetch
           git push
 
@@ -172,7 +172,8 @@ jobs:
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1
         with:
-          draft: true        
+          draft: true  
+          tag: ${{ github.ref_name }}
           artifacts: "releases/${{env.TOOLBOX_FILE_NAME}}_${{ env.versionNumber }}.mltbx"
           generateReleaseNotes: true
           body: "![MATLAB Versions Tested](https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2F${{github.repository}}%2Fgh-badges%2F.github%2Fbadges%2F${{ github.ref_name }}%2Ftested_with.json)"
