--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -30,6 +30,8 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{ matrix.MATLABVersion }}
+          products: Image_Processing_Toolbox
+
 
       # Runs all tests in the project.  Put results in a version specific subdirectory
       - name: Run tests
