--- a/.github/workflows/run_codespell.yml
+++ b/.github/workflows/run_codespell.yml
@@ -11,10 +11,11 @@ on:
   pull_request:
     branches:
       - main
+      - dev
   push:
     branches:
       - main
-      - add/developer-tools
+      - dev
 
 jobs:
   codespell:
