Refactor file adapters
Simplify file adapter creation and re-organize code according to plugin concept

--- a/code/+nansen/+plugin/+fileadapter/resources/class_templates/@FileAdapterR/FileAdapter.m.template
+++ b/code/+nansen/+plugin/+fileadapter/resources/class_templates/@FileAdapterR/FileAdapter.m.template
@@ -5,7 +5,7 @@ classdef {{Name}} < nansen.dataio.FileAdapter
     end
 
     properties (Constant)
-        DataType = {{DataType}}
+        DataType = "{{DataType}}"
     end
     
     methods (Access = protected)
@@ -19,5 +19,4 @@ classdef {{Name}} < nansen.dataio.FileAdapter
         data = read(filePath, varargin)
     
     end
-
 end
