--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fex://66235-widgets-toolbox-compatibility-support/1.3.330
 fex://160058-recursively-list-files-and-folders
+fex://109114-scalebar-for-images-and-plots
 fex://38527-limit-figure-size
 fex://57773-cmocean-perceptually-uniform-colormaps
 fex://7021-spectral-and-xyz-color-functions
